--- a/JavaApplication1/nbproject/private/private.properties
+++ b/JavaApplication1/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\FamAncajima\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\NovatoPx\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
